[package]
name = "image-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-openai = { version = "0.41.0", features = ["image"] }
base64 = "0.22.1"
rmcp = { version = "1.7.0", features = ["server", "transport-io", "macros", "schemars"] }
# Reuses the reqwest already pulled in transitively by async-openai (same rustls TLS stack).
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
